Add some example of swagger api doc and automatic swagger generation when build
